# SRT

./: .gitignore  CMakeLists.txt  README.md  main.cpp
glsl/: srt.frag
renders/: first.ppm
src/: camera.hpp  color.hpp  hittable.hpp  hittable_list.hpp  main.cpp  material.hpp  ray.hpp  sphere.hpp  utils.hpp  vec3.cpp  vec3.hpp
